[project]
name = "powerSupply"
version = "0.1.0"
description = "A Python library to control a custom power supply"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [
  { name="Thomas Robert, email="tr.tomrobert@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["powerSupply"]
package-dir = {"" = "src"}
